# AICE-Application

./: .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt
main/: pyproject.toml
main/frontend/: requirements.txt  streamlit_app.py
main/frontend/.streamlit/: config.toml
main/frontend/components/: analysis_form.py  checklist_form.py  cost_form.py  essay_form.py  interview_prep_form.py  result_display.py  sidebar.py  timeline_form.py
main/frontend/frontend/components/: essay_form.py  sidebar.py
main/frontend/frontend/pages/: 1_Essay_Writing.py
main/frontend/pages/: 0_Home.py  1_Essay_Writing.py  2_Program_Analysis.py  3_Sentiment_Analysis.py  4_Cost_Analysis.py  5_Timeline_Planner.py  6_Checklist.py  7_Interview_prep.py
main/frontend/utils/: api.py  constants.py
main/src/: app.py  crew.py  db.py  generate_run.py  main.py
main/src/agents/: __init__.py
main/src/config/: config.json  models.py  report_paths.py
main/src/db/: __init__.py
main/src/tasks/: __init__.py
main/src/tools/: Comp_Instructions.md  __init__.py
main/src/utils/: __init__.py  program_analysis_utils.py  sentiment_utils.py
