[project]
name = "main"
version = "0.1.0"
description = "main using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
main = "main.main:run"
run_crew = "main.main:run"
train = "main.main:train"
replay = "main.main:replay"
test = "main.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
